correcion de analisis estatico